Text align fix on contact form page

--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -6,10 +6,10 @@
 }
 
 #innerContainer{
-    width: 75%;
+    width: 1200px;
     display: flex;
     flex-direction: column;
-    padding: 30px 0 50px;
+    padding: 30px 0 50px 20px;
 }
 #title{
     padding-top: 20px;
@@ -19,7 +19,7 @@
 #contactForm{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 600px;
 }
 
 #contactForm input{
